# cddlc-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  loader.rs  main.rs
tests/: integration.rs  message.cddl
tests/fixtures/: primitives.cddl  sensor.cddl  tagged.cddl
