[package]
name        = "cddlc-cli"
version     = "0.1.0"
edition     = "2021"
description = "Command-line CDDL compiler"
license     = "MIT OR Apache-2.0"

[[bin]]
name = "cddlc"
path = "src/main.rs"

[dependencies]
cddlc-parser  = { path = "../cddlc-parser" }
cddlc-ir      = { path = "../cddlc-ir" }
cddlc-codegen = { path = "../cddlc-codegen" }
backend-rust  = { path = "../backend-rust" }
backend-c     = { path = "../backend-c" }
backend-cpp   = { path = "../backend-cpp" }
backend-csharp = { path = "../backend-csharp" }
backend-nodejs = { path = "../backend-nodejs" }
backend-python = { path = "../backend-python" }
clap          = { version = "4", features = ["derive"] }
